--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,17 +50,17 @@
        <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/about.html">Sobre Nosotros</a></li>
-          <li><a href="/destinations.html">Destinos</a></li>
-          <li><a href="/tours.html">Tours</a></li>
-          <li><a href="/login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
+          <li><a href="/pages/destinations.html">Destinos</a></li>
+          <li><a href="/pages/tours.html">Tours</a></li>
+          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
       
-      <a class="btn-getstarted" href="/register.html">Registrarse</a>
+      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
     </div>
   </header>
 
@@ -382,17 +382,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/php-email-form/validate.js"></script>
-  <script src="vendor/aos/aos.js"></script>
-  <script src="vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/aos/aos.js"></script>
+  <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
