--- a/frontend/pages/user.html
+++ b/frontend/pages/user.html
@@ -51,17 +51,17 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/about.html">Sobre Nosotros</a></li>
-          <li><a href="/destinations.html">Destinos</a></li>
-          <li><a href="/tours.html">Tours</a></li>
-          <li><a href="/login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
+          <li><a href="/pages/destinations.html">Destinos</a></li>
+          <li><a href="/pages/tours.html">Tours</a></li>
+          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
 
-      <a class="btn-getstarted" href="/register.html">Registrarse</a>
+      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
 
     </div>
   </header>
